# srs-5g-compose

configs/: gnb_zmq.yaml
docker/: 5gc.yaml  Dockerfile  docker-compose.yml
docker/controller/: Dockerfile  README.md  pyproject.toml
docker/controller/src/: CoreNetwork.py  Gnb.py  MetricsServer.py  main.py
