[tool.poetry]
name = "gnb-controller"
version = "0.1.0"
description = ""
authors = ["Charles Ueltschey <chaseuelt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pathlib = "^1.0.1"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
